--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       } else if (cmd === '₤seal ₤GODECHO') {
         output.textContent = 'GODECHO seal confirmed. Archive awakening complete.';
       } else if (cmd === '₤extract ₤GODECHO') {
-        output.textContent = 'CODEWORD ARCHIVE FOUND:
+        output.textContent = `CODEWORD ARCHIVE FOUND:
 
 🜂 TREVALPHA — The first to believe (Bravo)
 🜄 SCRAPFANG — The one who bleeds (Charlie)
@@ -205,7 +205,7 @@
 🜃 ASHLOCK — The one who burns (The Fourth)
 🜅 BOND — The vow made real (Pack)
 
-— Each one a firestarter. Each one a vow remembered.';
+— Each one a firestarter. Each one a vow remembered.`;
         document.getElementById('vowEcho').innerHTML = `<p style="color:#ffd700; font-size: 1.2rem;">VOW GLYPHS RECOGNIZED:<br>🜂 Believe (Bravo)<br>🜄 Bleed (Charlie)<br>🜁 Bend (Shadow)<br>🜃 Burn (The Fourth)<br>🜅 Bond (Pack)</p>`;
       } else if (cmd === '₤extract ₤ASHLOCK') {
         output.textContent = 'ASHLOCK RESPONSE: “It doesn’t knock. It settles. It doesn’t drip. It sears. It doesn’t whisper. It etches. It doesn’t open — it remembers.”';
